# support_assistant

./: .env.dirty  .gitignore  definitions.json  docker-compose.yaml  gui_app.py  pyproject.toml
bot/src/: bot.py  config.py  ioc.py  main.py
bot/src/application/: dto.py  interactors.py  interfaces.py
bot/src/controllers/: bot.py  bot_states.py  filters.py  keyboards.py
bot/src/domain/: entities.py
bot/src/infrastructure/: broker.py  factories.py  gateways.py  message_paginator.py  redis_storage.py
sentence_bert/src/: config.py  ioc.py  main.py
sentence_bert/src/application/: dto.py  interactors.py  interfaces.py
sentence_bert/src/controllers/: ampq.py
sentence_bert/src/domain/: entities.py
sentence_bert/src/infrastructure/: broker.py  cache.py  factories.py  gateways.py
